add codepoint api
