# app/Http/Controllers/API/UprnController.php
@@ -5,7 +5,6 @@ namespace App\Http\Controllers\API;
 use App\Models\ApiJsonResponse;
 use Illuminate\Support\Facades\DB;
 use App\Http\Controllers\Controller;
-use App\Models\UprnOpen;
 use App\Models\UprnTopo;
 use Illuminate\Http\Request;
 
@@ -15,23 +14,10 @@ class UprnController extends Controller
      * @OA\Get(
      * path="/api/v1/uprn",
      * tags={"UPRN"},
-     * @OA\Response(response=200, description="List of OPEN UPRN", @OA\JsonContent()),
+     * @OA\Response(response=200, description="List of UPRN Topo", @OA\JsonContent()),
      * )
      */
     public function index()
-    {
-        $data = UprnOpen::query()->paginate(20);
-        return ApiJsonResponse::sendOkResponse(['uprn' => $data]);
-    }
-
-    /**
-     * @OA\Get(
-     * path="/api/v1/uprn/joined",
-     * tags={"UPRN"},
-     * @OA\Response(response=200, description="List of UPRN TOPO JOINED", @OA\JsonContent()),
-     * )
-     */
-    public function joined()
     {
         $data = UprnTopo::query()->paginate(20);
         return ApiJsonResponse::sendOkResponse(['uprn' => $data]);
