# app/Models/Codepoint.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Support\Facades\DB;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Codepoint extends Model
+{
+    use HasFactory;
+
+    protected $table = 'osopenuprn_address_codepoint';
+    protected $connection = 'pgsql';
+    protected $fillable = [
+        'fid',
+        'uprn',
+    ];
+
+    protected $spatialFields = ['geometry'];
+
+    protected $casts = [
+        'uprn' => 'integer',
+        'positional_quality_indicator' => 'integer',
+        'x_coordinate' => 'float',
+        'y_coordinate' => 'float',
+        'latitude' => 'float',
+        'longitude' => 'float',
+        'geometry' => 'array',
+    ];
+
+    public function newQuery()
+    {
+        return parent::newQuery()->select(
+            'fid',
+            'uprn', 
+            'x_coordinate', 
+            'y_coordinate', 
+            'latitude', 
+            'longitude',
+            'postcode', 
+            'positional_quality_indicator', 
+            'country_code', 
+            'nhs_regional_ha_code', 
+            'nhs_ha_code', 
+            'admin_county_code', 
+            'admin_district_code', 
+            'admin_ward_code', 
+            DB::raw('public.ST_AsGeoJSON(st_transform(geom, 4326)) as geometry')
+        );
+    }
+}
