# storage/api-docs/api-docs.json
@@ -79,6 +79,43 @@
                 }
             }
         },
+        "/api/v1/codepoint": {
+            "get": {
+                "tags": [
+                    "Codepoint"
+                ],
+                "operationId": "e500a77e7fede51e4068f294ea35a15b",
+                "parameters": [
+                    {
+                        "name": "postcode",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "BA1 0AH"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of codepoint",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/galleries/": {
             "get": {
                 "tags": [
@@ -634,25 +671,7 @@
                 "operationId": "ac2dbe4d1e6b3b5873f36c8bb1e0c2b3",
                 "responses": {
                     "200": {
-                        "description": "List of OPEN UPRN",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/uprn/joined": {
-            "get": {
-                "tags": [
-                    "UPRN"
-                ],
-                "operationId": "a2bba7c73cd17bd77e88fb498a4c9ee7",
-                "responses": {
-                    "200": {
-                        "description": "List of UPRN TOPO JOINED",
+                        "description": "List of UPRN Topo",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -667,6 +686,10 @@
         {
             "name": "Building Part",
             "description": "Building Part"
+        },
+        {
+            "name": "Codepoint",
+            "description": "Codepoint"
         },
         {
             "name": "Gallery",
